# device_soc_st

./: BUILD.gn  Kconfig.liteos_m.defconfig  Kconfig.liteos_m.series  Kconfig.liteos_m.soc  OAT.xml  README.en.md  README.md  README_zh.md
common/hal/display/: display_gralloc.c  display_layer.c
common/platform/: BUILD.gn  Kconfig  lite.mk
common/platform/adc/: BUILD.gn  Makefile  adc_test.c  stm32mp1_adc.c  stm32mp1_adc.h
common/platform/gpio/: BUILD.gn  Makefile  stm32mp1_gpio.c  stm32mp1_gpio.h
common/platform/i2c/: BUILD.gn  Makefile  stm32mp1_i2c.c  stm32mp1_i2c.h
common/platform/iwdg/: BUILD.gn  Makefile  stm32mp1_iwdg.c
common/platform/pwm/: BUILD.gn  Makefile  stm32mp1_pwm.c  stm32mp1_pwm.h
common/platform/rng/: BUILD.gn  Makefile  stm32mp1_rng.c
common/platform/smp/: BUILD.gn  Makefile  arm-smccc.h  smccc-call.S  stm32mp1_smp.c  stm32mp1_smp.h
common/platform/spi/: BUILD.gn  Makefile  stm32mp1_spi.c  stm32mp1_spi.h
common/platform/stm32mp1xx_hal/: BUILD.gn  Makefile
common/platform/uart/: BUILD.gn  KRecvBuf.c  KRecvBuf.h  Makefile  stm32mp1_uart.c  stm32mp1_uart_hw.c  stm32mp1_uart_hw.h
entrance_guard/: BUILD.gn  Makefile  build.sh  default.ld
entrance_guard/board/: BUILD.gn  config.gni  dprintf.c  main.c  st_config.h  startup.s  target_config.h  test_sample.c
stm32f4xx/: BUILD.gn  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.defconfig.stm32f4xx  Kconfig.liteos_m.series  Kconfig.liteos_m.soc
stm32f4xx/sdk/: BUILD.gn
stm32mp157/sdk_linux/: BUILD.gn
stm32mp157/sdk_liteos/hdf_config/: hdf.hcs
stm32mp1xx/sdk_liteos/: BUILD.gn
(+37 files in other folders)
