# Copyright (c) 2020 Huawei Device Co., Ltd. All rights reserved.

import("//build/lite/config/component/lite_component.gni")

group("entrance_guard") {
}

build_ext_component("liteos") {
   exec_path = rebase_path(".", root_build_dir)
   outdir = rebase_path("$root_out_dir")
   command = "sh ./build.sh ${outdir}"
   deps = [
     "//build/lite:ohos",
     "//device/st/entrance_guard/board:board",
   ]
}
