# Copyright (c) 2020 Huawei Device Co., Ltd. All rights reserved.

static_library("board") {
  sources = [
      "./fs/ff_gen_drv.c",
      "./main.c",
      "./dprintf.c",
      "./test_sample.c",
      "./startup.s"
  ]

  include_dirs = [
    "//kernel/liteos_m/kernel/include",
    "//kernel/liteos_m/kernel/arch/include",
    "//kernel/liteos_m/utils",
    "//kernel/liteos_m/kal/cmsis"
  ]

}
